--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="whaAlura.png" alt="" class="img_card_2" width="150px">
                     <h2 class="card_11">Alura</h2>
             
-                    <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt hic dolore alias nemo dignissimos pariatur minus nam atque consequatur ratione consequuntur iusto, ipsam aliquid voluptatem sunt harum aliquam delectus explicabo.
+                    <p class="lorem">Lorem ipsum dolor sit amet  teste consectetur adipisicing elit. Deserunt hic dolore alias nemo dignissimos pariatur minus nam atque consequatur ratione consequuntur iusto, ipsam aliquid voluptatem sunt harum aliquam delectus explicabo.
                     </p>
             </div>
             <div>
