--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h1>
                         Olá, me chamo
                     </h1>
-                    <div class="nome"> Fábio Bazante </div>
+                    <div class="nome"> Fábio Bazante . </div>
 
                 </div>
 
