--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="body">
     <header class="header">
-        <nav class=>
+        <nav>
             <a target="_blank" href="https://www.instagram.com/f.bazante/">Instagram</a>
             <a target="_blank" href="https://www.linkedin.com/in/bazant23/">Linkedin</a>
             <a target="_blank" href="https://github.com/bazant23">Github</a>
