alteração no tesla

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <img src="Whatsperfil2.jpeg" alt="" class="segundabola" width="250">
         </div>
         <div class="container_12">
-            <p> {Creio firmemente em uma lei de compensação. As verdadeiras recompensas são sempre proporcionais ao esforço e aos sacrifícios feitos... }</p>
-            <h2 class="nicolas">Nicolas Tela</h2>
+            <p> { "Creio firmemente em uma lei de compensação. As verdadeiras recompensas são sempre proporcionais ao esforço e aos sacrifícios feitos..." }</p>
+            <h2 class="nicolas">Nicolas Tesla</h2>
         </div>
     </div>
 
