--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="Whatsperfil2.jpeg" alt="" class="segundabola" width="250">
         </div>
         <div class="container_12">
-            <p> { "Creio firmemente em uma lei de compensação. As verdadeiras recompensas são sempre proporcionais ao esforço e aos sacrifícios feitos..." }</p>
+            <p> {"Creio firmemente em uma lei de compensação. As verdadeiras recompensas são sempre proporcionais ao esforço e aos sacrifícios feitos.."}</p>
             <h2 class="nicolas">Nicolas Tesla</h2>
         </div>
     </div>
@@ -88,7 +88,7 @@
                 <label for=>Email</label>
                 <input class="input" type="email" nome="email" placeholder=" Digite  seu email" autocomplete="off">
                 <label for="">Mensagem</label>
-                <textarea none="message" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
+                <textarea  class="input" none="message" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
                 <button type="submit">Enviar</button>
 
                 <input type="hidden" name="accessKey" value="72ce73cc-21c4-4c5f-8833-2cb70cb06a6e">
