--- a/obrigado.html
+++ b/obrigado.html
@@ -8,7 +8,7 @@
     <title>Obrigado</title>
 </head>
 <body class="main">
-    <h1 class="text">Obrigado pelo contato</h1>
+    <h1 class="text">Obrigado pelo contato!</h1>
     <p class="paragrafo">Em breve entrarei em contato </p>
     <a href="index.html" class="btn">Home</a>
 </body>
