--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="obrigado.html">
+    <link rel="stylesheet" href="obrigado.css">
     <title>Portfólio</title>
 </head>
 
