--- a/index.html
+++ b/index.html
@@ -82,15 +82,18 @@
 
     <footer class="footer">
         <section class="selection">
-            <form action="https://api.staticforms.xyz/submit" method="post" id="form">
+            <form  id="form"action="https://api.staticforms.xyz/submit" method="post">
                 <h2 class="contato1">Contato</h2>
                 <label>Nome</label>
-                <input class="input" type="text" none="nome" placeholder="Digite seu nome" autocomplete="off" id="nome">
+                <input type="text" id="name" none="none" placeholder="Digite seu nome" autocomplete="off">
+
                 <label for=>Email</label>
-                <input class="input" type="email" nome="email" placeholder=" Digite  seu email" autocomplete="off" id="email">
+                <input type="email" id="email" nome="email" placeholder=" Digite  seu email" autocomplete="off">
+
                 <label for="">Mensagem</label>
-                <textarea  id="message" class="input" none="message" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
-                <button type="submit" id="Enviar">Enviar</button>
+                <textarea  id="message" none="message" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
+
+                <button type="submit">Enviar</button>
 
                 <input type="hidden" name="accessKey" value="72ce73cc-21c4-4c5f-8833-2cb70cb06a6e">
                 <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/obrigado.html">
