--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <form  id="form"action="https://api.staticforms.xyz/submit" method="post">
                 <h2 class="contato1">Contato</h2>
                 <label>Nome</label>
-                <input type="text" id="name" none="none" placeholder="Digite seu nome" autocomplete="off">
+                <input type="text" id="name" none="none" placeholder="Digite seu nome" autocomplete="off" oninput="nameInput.value">
 
                 <label for=>Email</label>
                 <input type="email" id="email" nome="email" placeholder=" Digite  seu email" autocomplete="off">
