alteração de formulário

--- a/index.html
+++ b/index.html
@@ -80,26 +80,7 @@
         </div>
     </div>
 
-    <footer class="footer">
-        <section class="selection">
-            <form  id="form"action="https://api.staticforms.xyz/submit" method="post">
-                <h2 class="contato1">Contato</h2>
-                <label>Nome</label>
-                <input type="text" id="name" none="none" placeholder="Digite seu nome" autocomplete="off" oninput="nameInput.value">
-
-                <label for=>Email</label>
-                <input type="email" id="email" nome="email" placeholder=" Digite  seu email" autocomplete="off">
-
-                <label for="">Mensagem</label>
-                <textarea  id="message" none="message" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
-
-                <button type="submit">Enviar</button>
-
-                <input type="hidden" name="accessKey" value="72ce73cc-21c4-4c5f-8833-2cb70cb06a6e">
-                <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/obrigado.html">
-            </form>
-        </section>
-    </footer>
+    <footer></footer>
     <script src="script.js"></script>
 </body>
 
