--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container_12">
             <p> {"Creio firmemente em uma lei de compensação. As verdadeiras recompensas são sempre proporcionais ao
                 esforço e aos sacrifícios feitos.."}</p>
-            <h2 class="nicolas">Nicolas Tesla</h2>
+            <h2 class="nicolas">Nikola Tesla</h2>
         </div>
     </div>
 
