--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
             <h2 class="nicolas">Nikola Tesla</h2>
         </div>
     </div>
+    <div class="whats">
+        <a href="https://wa.me/558189859090?text=Olá Fábio, Visualizei seu Portifólio, desejo falar com vc!" target="_blank">
+            <img src="R.png" width="55px" alt="Fale comigo pelo whatssap" title="Fale comigo pelo whatssap">
+        </a>
+    </div>
 
-  
 </body>
 
 </html>
