--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <h1>
                         Olá, me chamo
                     </h1>
-                    <div class="nome"> Fábio Bazante </div>
+                    <div class="nome">
+                        Fábio Bazante
+                    </div>
 
                 </div>
 
@@ -85,10 +87,19 @@
         </div>
     </div>
     <div class="whats">
-        <a href="https://wa.me/558189859090?text=Olá Fábio, Visualizei seu Portifólio, desejo falar com vc!" target="_blank">
+        <a href="https://wa.me/558189859090?text=Olá Fábio, Visualizei seu Portifólio, desejo falar com vc!"
+            target="_blank">
             <img src="R.png" width="55px" alt="Fale comigo pelo whatssap" title="Fale comigo pelo whatssap">
         </a>
     </div>
+    <script>
+        var n1 = prompt("Digite um número:");
+        n1 = parseFloat(n1);
+        var n2 = prompt("Digite mais um número");
+        n2 = parseFloat(n2);
+
+        alert(n1 + n2);
+    </script>
 </body>
 
 </html>
