--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="obrigado.css">
     <link rel="stylesheet" href="reset.css">
     <title>Portfólio</title>
 </head>
@@ -20,7 +19,6 @@
         </nav>
 
     </header>
-
     <main>
         <div class="div1">
 
@@ -35,7 +33,6 @@
                     <div class="nome">
                         Fábio Bazante
                     </div>
-
                 </div>
 
                 <div class="texto11">
@@ -93,12 +90,11 @@
         </a>
     </div>
     <script>
-        var n1 = prompt("Digite um número:");
-        n1 = parseFloat(n1);
-        var n2 = prompt("Digite mais um número");
-        n2 = parseFloat(n2);
+        var n1 = prompt("digite um número:");
 
-        alert(n1 + n2);
+        var n2 = prompt("Digite outro número:");
+        
+        alert( n1 + n2); 
     </script>
 </body>
 
