--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
     </div>
     <script>
         var n1 = prompt("digite um número:");
+        n1 = parseFloat(n1);
 
         var n2 = prompt("Digite outro número:");
-        
-        alert( n1 + n2); 
+        n2 = parseFloat(n2);
+
+        alert(n1 + n2); 
     </script>
 </body>
 
