--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
         </a>
     </div>
     <script>
-        var n1 = prompt("digite um número:");
-        n1 = parseFloat(n1);
+        var p1 = prompt("Digite um número:");
+        p1 = parseFloat(p1);
+        var p2 = prompt("Digite outro número:");
+        p2 = parseFloat(p2);
+        var media = (p1 + p2) / 2 ;
 
-        var n2 = prompt("Digite outro número:");
-        n2 = parseFloat(n2);
-
-        alert(n1 + n2); 
+        alert("A média da soma é :"+ media);
     </script>
 </body>
 
