adicionando as paginas do script

--- a/index.html
+++ b/index.html
@@ -89,15 +89,7 @@
             <img src="R.png" width="55px" alt="Fale comigo pelo whatssap" title="Fale comigo pelo whatssap">
         </a>
     </div>
-    <script>
-        var p1 = prompt("Digite um número:");
-        p1 = parseFloat(p1);
-        var p2 = prompt("Digite outro número:");
-        p2 = parseFloat(p2);
-        var media = (p1 + p2) / 2 ;
-
-        alert("A média da soma é :"+ media);
-    </script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
